--- a/Course1_Horse_or_Human_Compacted.ipynb
+++ b/Course1_Horse_or_Human_Compacted.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Course1-Horse-or-Human-Compacted.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPRqoarL8wNx5fL1dLyXnGv",
+      "authorship_tag": "ABX9TyM8k2TsZkOPFhfqQmPFved5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "*  Image sized to (150,150) instead of (300,300).\n",
         "*  3 convolutional layers used instead of 5.\n",
         "*  The training time is reduced.\n",
-        "*  Some classifications less accurate.\n",
+        "*  Some classifications less accurate, because two convolutions are removed to handle the smaller images.\n",
         "\n",
         "\n"
       ]
@@ -201,7 +201,7 @@
         "#  else:\n",
         "#    print(fn + \" is a horse\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
