--- a/Course3(2_3)_ImdbSubwords.ipynb
+++ b/Course3(2_3)_ImdbSubwords.ipynb
@@ -45,7 +45,8 @@
       },
       "source": [
         "# - A step back to start using RNNs \n",
-        "# Working on **subwords**, which are hard to pull semantics and meaning out of them"
+        "# Working on **subwords**\n",
+        "# Can see that not only do the meanings of the words matter, but also the sequence in which they are found."
       ]
     },
     {
@@ -63,7 +64,7 @@
         "import tensorflow as tf\n",
         "print(tf.__version__)\n"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,7 +90,7 @@
         "import tensorflow as tf\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,7 +117,7 @@
         "import tensorflow_datasets as tfds\n",
         "imdb, info = tfds.load(\"imdb_reviews/subwords8k\", with_info=True, as_supervised=True)\n"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +136,7 @@
       "source": [
         "train_data, test_data = imdb['train'], imdb['test']"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -146,7 +147,7 @@
       "source": [
         "tokenizer = info.features['text'].encoder"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -161,7 +162,7 @@
       "source": [
         "print(tokenizer.subwords)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,7 +191,7 @@
         "original_string = tokenizer.decode(tokenized_string)\n",
         "print ('The original string: {}'.format(original_string))\n"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +216,7 @@
         "for ts in tokenized_string:\n",
         "  print ('{} ----> {}'.format(ts, tokenizer.decode([ts])))"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,7 +250,7 @@
         "train_dataset = train_dataset.padded_batch(BATCH_SIZE, tf.compat.v1.data.get_output_shapes(train_dataset))\n",
         "test_dataset = test_data.padded_batch(BATCH_SIZE, tf.compat.v1.data.get_output_shapes(test_data))"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -272,7 +273,7 @@
         "\n",
         "model.summary()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,7 +315,7 @@
         "\n",
         "history = model.fit(train_dataset, epochs=num_epochs, validation_data=test_dataset)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,7 +370,7 @@
         "plot_graphs(history, \"accuracy\")\n",
         "plot_graphs(history, \"loss\")"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -435,7 +436,7 @@
         "  files.download('vecs.tsv')\n",
         "  files.download('meta.tsv')"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
